# const-chunks

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  panic_guard.rs  remainder.rs
