[package]
name = "const-chunks"
version = "0.1.0"
edition = "2021"
description = "Extension trait to chunk iterators into const-length arrays."
repository = "https://github.com/LouisGariepy/const-chunks"
license = "MIT/Apache-2.0"
keywords = ["iterator", "const-generics", "chunk", "iteration", "adaptor"]
categories = ["algorithms", "rust-patterns"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
