[package]
name = "const-chunks"
version = "0.2.2"
edition = "2021"
rust-version = "1.65.0"
description = "Extension trait to chunk iterators into const-length arrays."
repository = "https://github.com/LouisGariepy/const-chunks"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "const-generics", "chunk", "iteration", "adaptor"]
categories = ["algorithms", "rust-patterns", "no-std", "no-std::no-alloc"]
